# odysseus

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  init.sql
services/events/: Cargo.toml  Dockerfile
services/events/migration/: Cargo.toml
services/events/migration/src/: lib.rs  m20251004_052634_create_events_table.rs
services/events/src/: main.rs
services/events/src/adapters/inbound/http/: routes.rs
services/events/src/adapters/inbound/http/dtos/requests/: create_event.rs  mod.rs
services/events/src/adapters/inbound/http/dtos/responses/: create_event_error.rs  create_event_response.rs  get_event_error.rs  get_event_response.rs  mod.rs
services/events/src/adapters/inbound/http/handlers/: create_event.rs  get_event.rs  mod.rs
services/events/src/adapters/outbound/persistence/: mod.rs
services/events/src/adapters/outbound/persistence/models/: event.rs
services/events/src/adapters/outbound/persistence/repositories/: event_repository.rs  mod.rs
services/events/src/domain/: errors.rs  mod.rs
services/events/src/domain/entities/: event.rs
services/events/src/domain/repositories/: event_repository.rs  mod.rs
services/events/src/domain/use_cases/: create_event.rs  get_event.rs  mod.rs
services/users/: .env.example  Cargo.toml  Dockerfile
services/users/migration/src/: lib.rs  m20251004_041126_create_users_table.rs
services/users/src/: main.rs
services/users/src/adapters/inbound/http/: mod.rs  routes.rs
services/users/src/adapters/inbound/http/dtos/: mod.rs
services/users/src/adapters/inbound/http/dtos/requests/: create_user.rs
services/users/src/adapters/inbound/http/dtos/responses/: create_user_error.rs  (+4 more)
services/users/src/adapters/inbound/http/handlers/: create_user.rs  get_user.rs  mod.rs
services/users/src/adapters/outbound/persistence/: mod.rs
services/users/src/adapters/outbound/persistence/models/: user.rs
services/users/src/adapters/outbound/persistence/repositories/: user_repository.rs
services/users/src/domain/: errors.rs  mod.rs
services/users/src/domain/commands/: create_user.rs  mod.rs
services/users/src/domain/entities/: user.rs
services/users/src/domain/repositories/: user_repository.rs
services/users/src/domain/use_cases/: create_user.rs  get_user.rs  mod.rs
(+4 files in other folders)
