[package]
name = "events"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../../shared" }
migration = { path = "./migration", package = "events-migration" }
actix-web.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dotenvy.workspace = true
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
sea-orm-migration = "1"

# Constrain transitive dependencies to avoid edition2024 requirement
[dependencies.const-oid]
version = "0.9"

[dependencies.base64ct]
version = "< 1.8"
