[package]
name = "users"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Constrain transitive dependencies to avoid edition2024 requirement
[dependencies.const-oid]
version = "0.9"

[dependencies.base64ct]
version = "< 1.8"
